projects/rawkode.cloud/gitops/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: rawkode-cloud
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.rawkode.cloud"
      tls:
        mode: Terminate
        certificateRefs:
          - name: rawkode-cloud-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-rawkode-chat
      protocol: HTTPS
      port: 443
      hostname: rawkode.chat
      tls:
        mode: Terminate
        certificateRefs:
          - name: rawkode-chat-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-code-rawkode-academy
      protocol: HTTPS
      port: 443
      hostname: code.rawkode.academy
      tls:
        mode: Terminate
        certificateRefs:
          - name: code-rawkode-academy-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: teleport-passthrough
      protocol: TLS
      port: 443
      hostname: "teleport.rawkode.cloud"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
    - name: teleport-grpc-passthrough
      protocol: TLS
      port: 443
      hostname: "*.teleport.cluster.local"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
    - name: teleport-kube-passthrough
      protocol: TLS
      port: 443
      hostname: "*.teleport.rawkode.cloud"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
